[package]
name = "mlog"
version = "0.1.0"
edition = "2021"
authors = ["Eray Altun <ealtun21@ku.edu.tr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
rumqttc = "0.22.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
